<resources>
    <string name="app_name">Work It Out</string>

    <string name="action_settings">Settings</string>
    <string name="nav_workout">Workout</string>
    <string name="nav_measurements">Measurements</string>
    <string name="nav_weight">Weight</string>
    <string name="nav_location">Location</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_water">Water</string>
    <string name="nav_settings">Settings</string>

    <string name="title_activity_user">Login</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_water">Water</string>
    <string name="title_activity_exercise_list">Exercises</string>
    <string name="title_activity_measurements">Measurements</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_measurements_graph">Measurements</string>
    <string name="title_activity_warm_up">Warm up</string>
    <string name="title_activity_location">Locations</string>
    <string name="title_activity_weight">Weight</string>
    <string name="title_activity_exercise_info">Exercises</string>
    <string name="title_activity_stretch">Stretching</string>
    <string name="title_activity_main">Workout</string>
    <string name="title_activity_login">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_gym_main">Locations</string>
    <string name="title_activity_new_public_location">New Gym</string>
    <string name="title_activity_save_public_location">Search for Gym</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_edit_public_location">Edit Gym</string>
    <string name="title_activity_view_public_location_details">ViewPublicLocationDetails</string>
    <string name="title_activity_internet_check">InternetCheckActivity</string>
    <string name="title_activity_stretch_warm_up">StretchWarmUpActivity</string>

    <string name="notifications">Notifications:</string>
    <string name="name">Name:</string>
    <string name="weight">Weight:</string>
    <string name="goal_weight">Goal weight:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="goal">Goal:</string>
    <string name="kg">kg</string>
    <string name="height">Height:</string>
    <string name="cm">cm</string>
    <string name="login_negative">Please fill everything out.</string>
    <string name="login_positive">Login completed.</string>

    <string name="your_recommended_daily_water_intake">Your recommended daily water intake:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="new_entry">New entry</string>
    <string name="litre">L</string>

    <string name="new_location">New location</string>
    <string name="edit_location">Edit location</string>
    <string name="available_equipment">Available equipment:</string>
    <string name="no_name_entered">No name entered.</string>
    <string name="no_equipment_selected">Please select available equipment. If you don\'t have any equipment, select \'No equipment\'.</string>

    <string name="goal_reached">Goal measurement reached!</string>
    <string name="period_select">Select period</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="all">All</string>
    <string name="entries">Entries:</string>
    <string name="no_weight_entered">No measurement entered.</string>
    <string name="already_entered_weight">Already entered measurement for selected day!</string>

    <string name="choose_location_toast">Please choose a location.</string>
    <string name="choose_location">Choose location</string>

    <string name="warm_up">Warm up</string>
    <string name="workout">Workout</string>
    <string name="stretch">Stretch</string>
    <string name="no_locations_yet">No locations yet.</string>

    <string name="reps">reps</string>
    <string name="time">time</string>
    <string name="finish">Finish</string>
    <string name="go_back">Go Back</string>
    <string name="exercise_number">Exercise #</string>
    <string name="timer_done">Done! Press to start timer again.</string>
    <string name="timer_start">Press to start timer!</string>
    <string name="timer_short">3 x 60 seconds</string>
    <string name="timer_long">20 minutes</string>
    <string name="reps_no_weight">4x20 reps</string>
    <string name="reps_cardio">4x15 reps</string>
    <string name="weight_70">70% measurement</string>
    <string name="reps_weight">4x8 reps</string>
    <string name="weight_max">max measurement</string>
    <string name="workout_completed">Workout completed!</string>

    <string name="measurements_filler">-- cm</string>
    <string name="no_values_entered">No values entered.</string>
    <string name="measurements_for">Measurements for</string>
    <string name="already_entered">already entered for this date.</string>

    <string-array name="user_types_array">
        <item>User</item>
        <item>Gym</item>
    </string-array>

    <string name="password_match_error">Passwords don\'t match!</string>
    <string name="registered">Registered!</string>
    <string name="no_profile_type_error">Please choose profile type!</string>
    <string name="registration_canceled_toast">Registration canceled</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">No account yet? Register now!</string>

    <string name="gym_details_missing">Please fill name, description and address out</string>
    <string name="gym_time_error">If gym is closed uncheck checkbox, otherwise fill out both times</string>
    <string name="gym_time_diff_error">Close time must be later than open time</string>


    <string name="waiting_for_internet_connection">Waiting for internet connection!</string>

    <string name="location_not_found_dialog">Location could not be found!</string>
    <string name="description">Description:</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="zip">Zip:</string>
    <string name="address">Address:</string>
    <string name="open_days_hours">Open days / hours:</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="choose_account_type">Choose account type:</string>
    <string name="login_details">Login details:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="monday_full">Monday:</string>
    <string name="tuesday_full">Tuesday:</string>
    <string name="wednesday_full">Wednesday:</string>
    <string name="thursday_full">Thursday:</string>
    <string name="friday_full">Friday:</string>
    <string name="saturday_full">Saturday:</string>
    <string name="sunday_full">Sunday:</string>
    <string name="no_locations_found">No locations found!</string>

    <string name="shoulders">Shoulders:</string>
    <string name="chest">Chest:</string>
    <string name="waist">Waist:</string>
    <string name="hips">Hips:</string>
    <string name="right_upper_arm">Right Upper Arm:</string>
    <string name="left_upper_arms">Left Upper Arms:</string>
    <string name="right_forearm">Right Forearm:</string>
    <string name="left_forearm">Left Forearm:</string>
    <string name="right_thigh">Right Thigh:</string>
    <string name="left_thigh">Left Thigh:</string>
    <string name="right_calf">Right Calf:</string>
    <string name="left_calf">Left Calf:</string>


</resources>
