<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/weight"
            android:title="@string/nav_workout" />
        <item
            android:id="@+id/nav_measurements"
            android:icon="@drawable/measuring"
            android:title="@string/nav_measurements" />
        <item
            android:id="@+id/nav_weight"
            android:icon="@drawable/graph"
            android:title="@string/nav_weight" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/bottle"
            android:title="@string/nav_water" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/power_thin"
            android:title="Logout" />
    </group>
</menu>