<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:scrollbarThumbVertical="@drawable/scrollbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="80dp"
        android:paddingRight="16dp"

        android:theme="@style/addItemDialog">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/location_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/available_equipment"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationEquipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/open_days_hours"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/monday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationMonday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/tuesday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationTuesday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/wednesday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationWednesday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/thursday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationThursday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/friday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationFriday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/saturday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationSaturday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/sunday_full"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationSunday"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>