<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarThumbVertical="@drawable/scrollbar"
    android:fillViewport="false" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="80dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/buttonMale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/gender_male_disabled"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_marginRight="20dp"
                android:scaleType="fitCenter"
                />

            <ImageButton
                android:id="@+id/buttonFemale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/gender_female_disabled"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_marginLeft="20dp"
                android:scaleType="fitCenter" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingRight="20dp" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/kg"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingRight="20dp" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/cm"
            android:gravity="center"/>

    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:paddingTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />


        <DatePicker
            android:id="@+id/dateOfBirthPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_weight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingRight="20dp" />

        <EditText
            android:id="@+id/goalWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/kg"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:paddingTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/buttonLoseWeight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/goal_lose_disabled"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:layout_marginRight="20dp"
            android:scaleType="fitCenter"
            />

        <ImageButton
            android:id="@+id/buttonGainMuscle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/goal_muscle_disabled"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:layout_marginLeft="20dp"
            android:scaleType="fitCenter" />

    </LinearLayout>

</LinearLayout>

</ScrollView>
